--- a/InterpretBank/InterpretBank/InterpretBank.csproj
+++ b/InterpretBank/InterpretBank/InterpretBank.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18beta</TradosFolder>
+		<TradosFolder>C:\Program Files (x86)\Trados\Trados Studio\Studio18</TradosFolder>
 		<TargetFramework>net48</TargetFramework>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18beta\Plugins</PluginDeploymentPath>
+		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\18\Plugins</PluginDeploymentPath>
 		<CreatePluginPackage>true</CreatePluginPackage>
 		<UseWPF>true</UseWPF>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
   <PropertyGroup>
     <ContentSQLiteInteropFiles>true</ContentSQLiteInteropFiles>
@@ -37,6 +37,7 @@
     <None Remove="Resources\Flag.png" />
     <None Remove="Resources\Glossary.png" />
     <None Remove="Resources\IB.ico" />
+    <None Remove="Resources\Information.png" />
     <None Remove="Resources\logo.png" />
     <None Remove="Resources\RejectEdit.png" />
     <None Remove="Resources\Remove.ico" />
@@ -134,7 +135,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
     <PackageReference Include="Sdl.MultiSelectComboBox" Version="1.0.77" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.115" />
@@ -166,6 +167,7 @@
     <Resource Include="Resources\Flag.png" />
     <Resource Include="Resources\Glossary.png" />
     <Resource Include="Resources\IB.ico" />
+    <Resource Include="Resources\Information.png" />
     <Resource Include="Resources\logo.png" />
     <Resource Include="Resources\RejectEdit.png" />
     <Resource Include="Resources\Remove.ico" />
