--- a/TMBackup/Sdl.Community.BackupFiles/Sdl.Community.BackupFiles.csproj
+++ b/TMBackup/Sdl.Community.BackupFiles/Sdl.Community.BackupFiles.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -77,7 +77,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="TaskScheduler">
-      <Version>2.10.1</Version>
+      <Version>2.11.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
